--- a/Wire-iOS/Resources/es.lproj/Localizable.strings
+++ b/Wire-iOS/Resources/es.lproj/Localizable.strings
@@ -670,6 +670,7 @@
 "call.status.terminating" = "Colgando…";
 "call.status.constant_bitrate" = "Tasa de bits constante";
 "call.status.variable_bitrate" = "Variable Bit Rate";
+"call.status.conference_call" = "Conference Calling";
 
 "call.participants.show_all" = "Mostrar Todo (%@)";
 "call.participants.list.title" = "Participantes";
@@ -727,7 +728,7 @@
 "participants.section.services" = "Servicios (%d)";
 "participants.section.settings" = "Opciones";
 "participants.footer.add_title" = "Añadir Participantes";
-"participants.section.name.footer" = "Hasta %1$d participantes pueden unirse a una conversación de grupo. Las llamadas de vídeo funcionan con hasta %2$d personas y tú.";
+"participants.section.name.footer" = "Up to %1$d participants can join a group conversation. Video calls work with up to %2$d other people and you.";
 "participants.section.admins.footer" = "No hay administradores";
 "participants.section.members.footer" = "No hay miembros";
 
@@ -1026,8 +1027,14 @@
 
 // Settings - Personal information
 "self.settings.privacy_analytics_section.title" = "Informes de uso y fallos";
-"self.settings.privacy_analytics.title" = "Enviar datos anónimos";
-"self.settings.privacy_analytics_menu.description.title" = "Ayude a mejorar Wire enviando informes anónimos de uso y de caídas.";
+
+// Crash
+"self.settings.privacy_crash.title" = "Send anonymous crash data";
+"self.settings.privacy_crash_menu.description.title" = "Send anonymous crash reports and basic data like version number and operating system to help Wire identify and solve issues in the app.";
+
+// Analytics
+"self.settings.privacy_analytics.title" = "Send anonymous usage data";
+"self.settings.privacy_analytics_menu.description.title" = "Usage data allows Wire to understand how the app is being used and how it can be improved. The data is anonymous and does not include the content of your communications (such as messages, files or calls).";
 
 "self.settings.receiveNews_and_offers.title" = "Recibir boletín de noticias";
 "self.settings.receiveNews_and_offers.description.title" = "Reciba noticias y actualizaciones de productos de Wire por correo electrónico.";
