--- a/Wire-iOS/Resources/lt.lproj/Localizable.strings
+++ b/Wire-iOS/Resources/lt.lproj/Localizable.strings
@@ -670,6 +670,7 @@
 "call.status.terminating" = "Baigiama…";
 "call.status.constant_bitrate" = "Pastovi sparta (bitais)";
 "call.status.variable_bitrate" = "Kintama sparta bitais";
+"call.status.conference_call" = "Conference Calling";
 
 "call.participants.show_all" = "Rodyti visus (%@)";
 "call.participants.list.title" = "Dalyviai";
@@ -727,7 +728,7 @@
 "participants.section.services" = "Paslaugos (%d)";
 "participants.section.settings" = "Parinktys";
 "participants.footer.add_title" = "Pridėti dalyvių";
-"participants.section.name.footer" = "Prie grupės susirašinėjimo gali prisijungti iki %1$d dalyvių. Bendrauti vaizdu gali iki %2$d žmonių ir jumis.";
+"participants.section.name.footer" = "Up to %1$d participants can join a group conversation. Video calls work with up to %2$d other people and you.";
 "participants.section.admins.footer" = "Administratorių nėra.";
 "participants.section.members.footer" = "Narių nėra.";
 
@@ -999,7 +1000,7 @@
 "self.settings.enable_read_receipts.title" = "Siųsti perskaitymo patvirtinimus";
 "self.settings.privacy_section_group.subtitle" = "Išjungus, jūs nematysite kada gavėjas perskaito jūsų siųstas žinutes.\n\nŠis nustatymas negalioja susirašinėjimams grupėje.";
 
-"self.settings.encrypt_messages_at_rest.title" = "Šifruoti neaktyvias žinutes";
+"self.settings.encrypt_messages_at_rest.title" = "Encrypt messages at rest";
 
 "self.settings.account_picture_group.picture" = "Paveikslas";
 "self.settings.account_picture_group.color" = "Spalva";
@@ -1026,8 +1027,14 @@
 
 // Settings - Personal information
 "self.settings.privacy_analytics_section.title" = "Naudojimo ir gedimo ataskaitos";
-"self.settings.privacy_analytics.title" = "Siųsti nuasmenintą informaciją";
-"self.settings.privacy_analytics_menu.description.title" = "Pagerinkite „Wire“ siųsdami anoniminę naudojimosi ir trikčių ataskaitą.";
+
+// Crash
+"self.settings.privacy_crash.title" = "Send anonymous crash data";
+"self.settings.privacy_crash_menu.description.title" = "Send anonymous crash reports and basic data like version number and operating system to help Wire identify and solve issues in the app.";
+
+// Analytics
+"self.settings.privacy_analytics.title" = "Send anonymous usage data";
+"self.settings.privacy_analytics_menu.description.title" = "Usage data allows Wire to understand how the app is being used and how it can be improved. The data is anonymous and does not include the content of your communications (such as messages, files or calls).";
 
 "self.settings.receiveNews_and_offers.title" = "Gaukite naujienlaiškį";
 "self.settings.receiveNews_and_offers.description.title" = "Gaukite naujienas ir produktų pakeitimo informaciją iš „Wire“ el. paštu.";
@@ -1178,9 +1185,9 @@
 "self.settings.privacy.clear_history.subtitle" = "Tai negrįžtamai ištrins visą susirašinėjimų praeitį.";
 
 "self.settings.advanced.title" = "Papildomi";
-"self.settings.advanced.conference_calling.title" = "Konferenciniai skambučiai";
-"self.settings.advanced.conference_calling.subtitle" = "Kai pasirinkimas aktyvus, garso ir vaizdo konferencijos įgalintos, ir daugiau žmonių gali dalyvauti. ";
-"self.settings.advanced.conference_calling.toggle" = "Bandymo programa";
+"self.settings.advanced.conference_calling.title" = "Conference Calls";
+"self.settings.advanced.conference_calling.subtitle" = "When this is on, audio and video conference calling is enabled, which allows a higher number of participants.";
+"self.settings.advanced.conference_calling.toggle" = "Beta Program";
 "self.settings.advanced.troubleshooting.title" = "Nesklandumų sprendimas";
 "self.settings.advanced.troubleshooting.submit_debug.title" = "Derinimo ataskaita";
 "self.settings.advanced.debugging_tools.title" = "Derinimo įrankiai";
